# docling.rs

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMPARING.md  Cargo.toml  MIGRATION.md  MODELS_NOTICE.md  PDF_CONFORMANCE.md  PDF_PARSER_NOTES.md  PDF_PERFORMANCE.md  README.md
.github/workflows/: ci.yml  deps-update.yml  npm-publish.yml  publish-models.yml  pypi-publish.yml
crates/docling/: Cargo.toml
crates/docling-asr/: Cargo.toml
crates/docling-cli/: Cargo.toml
crates/docling-core/: Cargo.toml
crates/docling-core/src/: chunker.rs  doclang.rs  doctags.rs  document.rs  json.rs  lib.rs  markdown.rs
crates/docling-node/: Cargo.toml  README.md  deps.js  index.d.ts  index.js
crates/docling-pdf/: Cargo.toml
crates/docling-py/: Cargo.toml  README.md  pyproject.toml
crates/docling-rag/: Cargo.toml  README.md
crates/docling-serve/: Cargo.toml  Dockerfile
crates/docling-wasm/: Cargo.toml  README.md
crates/fleischwolf/: Cargo.toml
crates/fleischwolf-cli/: Cargo.toml
crates/fleischwolf-node/: Cargo.toml  README.md  package.json
crates/fleischwolf-pdf/: Cargo.toml
crates/fleischwolf-rag/: README.md
docs/: MIGRATION.md  MODELS_NOTICE.md  PDF_CONFORMANCE.md  SECURITY.md
examples/: Dockerfile
scripts/: _common.sh  bump_version.sh  dclx_conformance.sh  docling_dump_all.py  download_dependencies.sh  dump_parse_cells.py  gen_dclx.py  parse_vs_ours.py  pdf_groundtruth.sh  pdf_setup.sh  performance.sh  quantize_models.py  release.sh
scripts/ci/: ci_publish.sh
scripts/conformance/: dclx_conformance.sh  gen_dclx.py  (+3 more)
(+334 files in other folders)
